--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,11 +3,15 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
+    <color name="bottom_nav">#1993CA</color>
+    <color name="blue">#07DDF8</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="pink">#EF0051</color>
+    <color name="pink">#FD3A7C</color>
+    <color name="red">#DA1C0E</color>
+    <color name="green">#09F613</color>
     <color name="colorPrimaryDark">#673AB7</color>
     <color name="colorAccent">#FFC107</color>
+    <color name="color">#B3B0A9</color>
 </resources>
