lesson 72 добавление в tasklist  SearchView

--- a/app/src/main/res/layout/activity_task_list.xml
+++ b/app/src/main/res/layout/activity_task_list.xml
@@ -15,7 +15,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:textSize="48sp"
         android:layout_margin="16dp"
-        android:text="Project"/>
+        android:text="Task"/>
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/search_view"
