--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textSize="48sp"
-        android:layout_margin="16dp"
+        android:textSize="@dimen/text_size_48_sp"
+        android:layout_margin="@dimen/matgin_16_dp"
         android:text="Project"/>
 
     <androidx.appcompat.widget.SearchView
@@ -24,7 +24,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="16dp"/>
+        android:layout_margin="@dimen/margin_16_dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
@@ -35,7 +35,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/search_view"
-        android:layout_marginTop="8dp"/>
+        android:layout_marginTop="@dimen/margin_top_8_dp"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bottom_nav"
@@ -52,8 +52,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginStart="24dp"
-            android:layout_marginLeft="24dp"
+            android:layout_marginStart="@dimen/margin_start_24_dp"
+            android:layout_marginLeft="@dimen/margin_left_24_dp"
             android:src="@drawable/ic_placeholder_it_academy"/>
 
         <ImageButton
@@ -64,18 +64,18 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:background="@drawable/ic_create"
-            android:layout_marginEnd="24dp"
+            android:layout_marginEnd="@dimen/margin_end_24_dp"
             android:layout_marginRight="24dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2 Notes"
+            android:text="@string/notes_2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:textSize="16sp"/>
+            android:textSize="@dimen/text_size_16_sp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
