lesson 78 hw/ добавления return request, и ColorBottomSheet

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:textSize="@dimen/text_size_48_sp"
-        android:layout_margin="@dimen/matgin_16_dp"
+        android:layout_margin="@dimen/margin_16_dp"
         android:text="Project"/>
 
     <androidx.appcompat.widget.SearchView
