--- a/app/src/main/res/menu/toolbar_create_project.xml
+++ b/app/src/main/res/menu/toolbar_create_project.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:color="@color/purple_200">
+    android:color="@color/green">
 
     <item
         android:id="@+id/action_create"
         app:showAsAction="always"
-        android:title="@string/create"/>
+        android:title="@string/create"
+        android:icon="@drawable/ic_toolbar_add" />
 
 </menu>
