--- a/app/src/main/res/layout/activity_create_project.xml
+++ b/app/src/main/res/layout/activity_create_project.xml
@@ -4,8 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".data.create.CreateProjectActivity">
+    android:layout_height="match_parent">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -16,27 +15,41 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:title="@string/create_project"
         app:navigationIcon="@drawable/ic_toolbar_back"/>
-    
+
     <EditText
         android:id="@+id/et_input_project_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/text_size_28_sp"
+        android:textSize="24sp"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="16dp"
-        android:hint="@string/input_create_project"/>
+        android:hint="@string/input_create_project"
+        android:background="@null"/>
+
+    <View
+        android:id="@+id/color_view1"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_margin="6dp"
+        android:background="@drawable/view_circle_color"
+        app:layout_constraintStart_toStartOf="@id/et_input_project_title"
+        app:layout_constraintTop_toTopOf="@+id/btn_select_color"
+        app:layout_constraintBottom_toBottomOf="@id/btn_select_color"
+        android:visibility="gone"/>
 
     <Button
         android:id="@+id/btn_select_color"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/et_input_project_title"
-        app:layout_constraintStart_toStartOf="@+id/et_input_project_title"
-        android:textSize="@dimen/text_size_19_sp"
+        android:textSize="16sp"
         android:text="@string/select_color"
-        android:layout_marginTop="@dimen/margin_top_24_dp"
-        android:background="@null"/>
+        app:layout_constraintTop_toBottomOf="@+id/et_input_project_title"
+        app:layout_constraintStart_toEndOf="@+id/color_view1"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="24dp"
+        android:background="@null"
+        android:layout_marginLeft="12dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
