--- a/app/src/main/res/layout/activity_notes_list.xml
+++ b/app/src/main/res/layout/activity_notes_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".data.task.TaskListActivity">
+    tools:context=".data.note.NotesListActivity">
 
     <TextView
         android:id="@+id/tv_title"
@@ -31,9 +31,11 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <include layout="@layout/view_bottom_tab"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
