--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,5 +11,6 @@
     <dimen name="margin_end_24_dp">24dp</dimen>
     <dimen name="text_size_16_sp">16sp</dimen>
     <dimen name="margin_16_dp">16dp</dimen>
+    <dimen name="margin_24_dp">24sp</dimen>
 
 </resources>
