--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -4,7 +4,10 @@
     android:layout_height="wrap_content"
     app:cardCornerRadius="16dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginTop="@dimen/margin_top_8_dp"
+    android:layout_marginEnd="@dimen/margin_top_8_dp"
+    android:layout_marginStart="@dimen/margin_top_8_dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
